deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyego-app
  labels:
    app: eyego-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eyego-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eyego-app
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: eyego-app
        image: 034362040531.dkr.ecr.us-east-1.amazonaws.com/eyego-repo:latest
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: Always
