ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eyegoApp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: eyegotask.example.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eyego-app-service
                port:
                  number: 80
